// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewCompany component renders correct for multiple elements 1`] = `
<div
  className="container"
>
  <div
    className="position-left"
  >
    <h2
      className="card-title text-white bg-success rounded-lg"
    >
      Poolinos
    </h2>
    <div
      className="row"
    >
      <div
        className="col-6 btn-group"
      >
        <button
          className="btn btn-info"
          onClick={[Function]}
          type="button"
        >
          Description
        </button>
        <button
          className="btn btn-dark"
          onClick={[Function]}
          type="button"
        >
          Tips Information
        </button>
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          Tips History
        </button>
      </div>
      <h5
        className=" text-right col-6 text-success position-right"
      >
        Average Tips $
        12.89
      </h5>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="container card"
    >
      <div
        className="table-responsive-sm"
      >
        <table
          className="table table-dark table-striped table-bordered table-hover"
        >
          <thead
            className="bg-info"
          >
            <tr>
              <th>
                #
              </th>
              <th>
                Company Locations
              </th>
              <th>
                Average Reported Tips
              </th>
              <th>
                Tips in This Zip Code area
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                1
              </td>
              <td>
                292 Bowery, New York, NY 10012
              </td>
              <td>
                $
                16.36
                 / Hour
              </td>
              <td>
                $
                16.36
                 / Hour
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewCompany component renders correct for single element 1`] = `
<div
  className="container"
>
  <div
    className="position-left"
  >
    <h2
      className="card-title text-white bg-success rounded-lg"
    >
      Poolinos
    </h2>
    <div
      className="row"
    >
      <div
        className="col-6 btn-group"
      >
        <button
          className="btn btn-info"
          onClick={[Function]}
          type="button"
        >
          Description
        </button>
        <button
          className="btn btn-dark"
          onClick={[Function]}
          type="button"
        >
          Tips Information
        </button>
        <button
          className="btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          Tips History
        </button>
      </div>
      <h5
        className=" text-right col-6 text-success position-right"
      >
        Average Tips $
        12.89
      </h5>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="container card"
    >
      <div
        className="table-responsive-sm"
      >
        <table
          className="table table-dark table-striped table-bordered table-hover"
        >
          <thead
            className="bg-info"
          >
            <tr>
              <th>
                #
              </th>
              <th>
                Company Locations
              </th>
              <th>
                Average Reported Tips
              </th>
              <th>
                Tips in This Zip Code area
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                1
              </td>
              <td>
                292 Bowery, New York, NY 10012
              </td>
              <td>
                $
                17.4
                 / Hour
              </td>
              <td>
                $
                17.4
                 / Hour
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
